# sitreps-python-api

./: .pre-commit-config.yaml  README.md  openapi.json  pyproject.toml  update_client.sh
.env/: pyvenv.cfg
.github/workflows/: tests.yaml
docs/: CLOCCreate.md  CodeCoverageApi.md  CodeCoverageCreate.md  CountLineOfCodeApi.md  Data.md  DefaultApi.md  IntegrationTestCreate.md  IntegrationTestsApi.md  JiraApi.md  JiraCreate.md  MetadataApi.md  MetadataCreate.md  ProjectCreate.md  ProjectGroupCreate.md  ProjectGroupUpdate.md  ProjectGroupsApi.md  ProjectsApi.md  RepoData.md  RepositoriesApi.md  RepositoryCreate.md  RepositoryUpdate.md  SonarQubeApi.md  SonarQubeCreate.md  UnitTestCreate.md  UnitTestsApi.md
sitreps_python_api/: __init__.py  api_client.py  configuration.py
test/: test_cloc_create.py  test_code_coverage_api.py  test_code_coverage_create.py  test_count_line_of_code_api.py  test_data.py  test_default_api.py  test_http_validation_error.py  test_integration_test_create.py  test_integration_tests_api.py  test_jira_api.py  test_jira_create.py  test_location_inner.py  test_metadata_api.py  test_metadata_create.py  test_project_create.py  test_project_group_create.py  test_project_group_update.py  test_project_groups_api.py  test_projects_api.py  test_repo_data.py  test_repositories_api.py  test_repository_create.py  test_repository_update.py  test_sonar_qube_api.py  test_sonar_qube_create.py  test_unit_test_create.py  test_unit_tests_api.py  test_validation_error.py
tmp/: .gitlab-ci.yml  .travis.yml  README.md  setup.py  tox.ini
tmp/.openapi-generator/: FILES
